Fixed FAQ transition issue on iphone

--- a/less/accordion.less
+++ b/less/accordion.less
@@ -55,6 +55,7 @@
 
   p {
     padding:1em 2em 1em 2em;
+    color: @grey;
   }
 }
 
@@ -110,12 +111,12 @@
 .accordionItem.is-collapsed {
     max-height:0;
 }
-.animateIn {
-     animation: accordionIn 0.65s normal ease both 1; 
-}
-.animateOut {
-     animation: accordionOut 0.65s normal ease both 1;
-}
+// .animateIn {
+//      animation: accordionIn 0.65s normal ease both 1; 
+// }
+// .animateOut {
+//      animation: accordionOut 0.65s normal ease both 1;
+// }
 @keyframes accordionIn {
   0% {
     opacity: 0;
